turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:12: error: type mismatch;
 found   : Unit
 required: Boolean
			if (c=colors.length) {
                             ^LangtonsAnt:15: error: type mismatch;
 found   : Int
 required: java.awt.Color
			setCouleurBrosse(c)
                                         ^